# lore

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: _update-homebrew-impl.yml  build-registry.yml  ci.yml  release.yml  update-homebrew.yml
Formula/: lore.rb
crates/lore-bench/: Cargo.toml
crates/lore-bench/src/: corpus.rs  main.rs  mrr.rs
crates/lore-bench/src/docs/: authentication.md  caching.md  cli-reference.md  concurrency.md  configuration.md  database.md  deployment.md  error-handling.md  file-io.md  getting-started.md  http-client.md  logging.md  migration.md  networking.md  performance.md  plugins.md  security.md  serialization.md  testing.md  types.md
crates/lore-build/: Cargo.toml
crates/lore-build/src/: builder.rs  discovery.rs  embedder.rs  indexer.rs  lib.rs  manifest.rs  tokens.rs
crates/lore-build/src/chunker/: mod.rs  semantic.rs  structural.rs
crates/lore-build/src/parser/: asciidoc.rs  html.rs  markdown.rs  mod.rs  rst.rs
crates/lore-build/src/source/: git.rs  local.rs  mod.rs  website.rs
crates/lore-build/tests/: parser_test.rs  pipeline_test.rs
crates/lore-cli/: Cargo.toml
crates/lore-cli/src/: main.rs
crates/lore-core/: Cargo.toml
crates/lore-core/src/: db.rs  doc.rs  error.rs  lib.rs  math.rs  node.rs  package.rs  search.rs
crates/lore-core/src/db/: crud.rs  helpers.rs  mod.rs  search.rs
crates/lore-core/tests/: db_test.rs
crates/lore-mcp/: Cargo.toml
crates/lore-mcp/src/: lib.rs
crates/lore-registry/: Cargo.toml
crates/lore-registry/src/: lib.rs  spec.rs
crates/lore-search/: Cargo.toml
crates/lore-search/src/: budget.rs  lib.rs  mmr.rs  resolve.rs  rrf.rs
docs/: ADR.md  ARCHITECTURE.md  CLAUDE_MD_INTEGRATION.md  INSTALL.md  PLAN.md  PRD.md  QUICKSTART.md  SUMMARY.md  TODO.md  rustdoc-source.md
install/: check-updates-notify.sh  dev.lore.check-updates.plist  homebrew-formula.rb.tmpl  install.ps1  install.sh
tests/fixtures/: api-reference.md  getting-started.md
tests/integration/: Cargo.toml
tests/integration/tests/: build_pipeline.rs  db_search.rs
