[workspace]
members  = ["crates/*", "tests/integration"]
resolver = "2"

[workspace.package]
version     = "0.2.0"
edition     = "2024"
authors     = ["Lore Contributors"]
license     = "MIT"
repository  = "https://github.com/Gasmanc/lore"

[workspace.dependencies]
# Core async / error handling
tokio         = { version = "1.51", features = ["full"] }
thiserror     = "2.0"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
serde_yaml    = "0.9"

# Database
rusqlite      = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
sqlite-vec    = "0.1.9"

# CLI
clap          = { version = "4", features = ["derive", "env"] }
indicatif     = "0.17"
dialoguer     = { version = "0.11", features = ["fuzzy-select"] }
console       = "0.15"

# HTTP / networking
# rustls-tls: pure-Rust TLS — no system OpenSSL required on any platform.
reqwest       = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Build pipeline
pulldown-cmark = "0.13"
scraper        = "0.23"
htmd           = "0.2"
# vendored-openssl: bundles and compiles OpenSSL from source so cross-compilation
# to aarch64-linux works without a sysroot OpenSSL installation.
git2           = { version = "0.20", default-features = false, features = ["https", "vendored-openssl"] }
walkdir        = "2"
tempfile       = "3"
md5            = "0.7"
dirs-next      = "2"

# Embeddings / tokens
fastembed     = "4"
tiktoken-rs   = "0.6"

# MCP
rmcp          = { version = "0.2", features = ["server", "transport-io", "macros"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
