[package]
name        = "lore-cli"
description = "The lore command-line interface"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "lore"
path = "src/main.rs"

[dependencies]
lore-core   = { path = "../lore-core" }
lore-build  = { path = "../lore-build" }
lore-search = { path = "../lore-search" }
lore-mcp      = { path = "../lore-mcp" }
lore-registry = { path = "../lore-registry" }
clap        = { workspace = true }
indicatif   = { workspace = true }
dialoguer   = { workspace = true }
console     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
