[package]
name        = "lore-registry"
description = "Registry API client, package download, and YAML definitions for Lore"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
lore-core  = { path = "../lore-core" }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
indicatif  = { workspace = true }
futures    = "0.3"
